--- a/hyprland.conf
+++ b/hyprland.conf
@@ -24,4 +24,4 @@ general {
 }
 
 # Change border color on full screen
-windowrulev2 = bordercolor $love,fullscreen:1
+windowrule = match:fullscreen true, border_color $love
